<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- App Titles -->
  <string name="app_name">Gif Search</string>
  <string name="license_screen_title">Open Source Licenses</string>
  <string name="license_screen_content_description">Open Source Licenses Menu Button</string>
  <string name="search_hint">Search Gifs</string>
  <string name="copy_url">Copy URL</string>

  <!-- Content Descriptions -->
  <string name="menu_back_content_description">Back Button</string>
  <string name="menu_close_content_description">Close Button</string>
  <string name="menu_more_content_description">More Button</string>
  <string name="menu_search_content_description">Search Button</string>
  <string name="gif_image_content_description">Gif Image</string>
  <string name="gif_image_dialog_content_description">Gif Image Dialog</string>
  <string name="no_gifs">No GIFs found</string>

  <!-- Snackbar Messages -->
  <string name="copied_to_clipboard">Copied to clipboard</string>
  <string name="save_to_gallery">Save to Gallery</string>
  <string name="saved_to_gallery">GIF saved to gallery</string>
  <string name="save_to_gallery_error">Failed to save GIF</string>
</resources>
